# DocSentinel

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Arthor-Agent-PRD.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_skill_template.md
.github/workflows/: ci.yml
app/: __init__.py  main.py  mcp_server.py
app/agent/: __init__.py  orchestrator.py  skills_registry.py  skills_service.py
app/api/: assessments.py  health.py  kb.py  skills.py
app/core/: config.py  db.py  guardrails.py  security.py
app/integrations/: __init__.py
app/kb/: __init__.py  service.py
app/llm/: __init__.py  base.py
app/models/: __init__.py  assessment.py  audit.py  parser.py  skill.py  user.py
app/parser/: __init__.py  service.py
docs/: 01-architecture-and-tech-stack.md  02-api-specification.yaml  03-assessment-report-and-skill-contract.md  04-integration-guide.md  05-deployment-runbook.md  DEMO-RECORD.md  LAUNCH-CHECKLIST.md  MARKETING-CHECKLIST.md  README.md  demo.html
docs/blog/: README.md
docs/schemas/: assessment-report.json
examples/templates/architecture_review/: skill.json
examples/templates/soc2_type2/: skill.json
examples/templates/supplier_review/: skill.json
frontend/: Home.py  utils.py
frontend/pages/: 1_Assessment_Workbench.py  2_Knowledge_Base.py  3_Skills_Manager.py
scripts/: generate_placeholders.py  generate_social_preview.py  generate_test_pdfs.py  process_demo_gif.py  video_to_gif.py
tests/: conftest.py  test_assessments_api.py  test_health.py  test_orchestrator.py  test_parser.py  test_skills_api.py
