[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arthor-agent"
version = "0.2.0"
description = "Automated security assessment for documents and questionnaires"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Arthur Pan", email = "panchao@example.com"}
]
keywords = ["security", "llm", "assessment", "rag"]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "openai",
    "httpx",
    "chromadb",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-text-splitters",
    "python-docx",
    "openpyxl",
    "PyPDF2",
    "python-pptx",
    "pandas",
    "reportlab",
    "aiofiles",
    "streamlit",
    "plotly",
    "moviepy"
]

[project.urls]
"Homepage" = "https://github.com/arthurpanhku/Arthor-Agent"
"Bug Tracker" = "https://github.com/arthurpanhku/Arthor-Agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# --- Tool Configuration ---

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
